version 0.81.05
	Using newer mingw for Windows crosscompile
	Attemp to fix root requirement

version 0.81.04 ( 2014-05-01 )
	--noshutter ( thx Piotr Dlugosz )
	Support for Samsung GX-1L ( not working )
	K-5 IIs jpeg star calculation fix ( commandline )
	Unknown camera segmentation fault bugfix
	Limited support for K-3 ( not working )

version 0.81.02 ( 2013-11-01 )
	udev rule change
	K-30 commandline exposure mode bugfix ( thx Camilo Polymeris )
	User mode combo bugfix
	K100D / K100D Super connection bugfix ( not working )
	gtk_range_get_value bugfix
	Human readable exposure submode

version 0.81.00 ( 2013-04-25 )
	Support for K-5 II / K-5 IIs ( thx Thomas Lehmann for testing )
	K10D/K20D: Exposure mode reading bugfix
	Changing licence to LGPL

version 0.80.00 ( 2013-04-04 )
	code cleanup ( Ethan Queen )
	Support for K-01 added by Ethan Queen <ethanqueen@gmail.com>
	Bulb mode in GUI version
	Merged save settings into Settings window
	Merged preview icons into Main window
	Eliminated Buffer Window
	Require at least gtk+ 2.16
	Eliminating libglade ( using GtkBuilder instead )
	Human readable raw format
	Attempt to fix *istD bug

version 0.79.02 ( 2013-01-12 )
	--reconnect
	Fix K-5 zoom reading bug
	Adding command line html file to windows zip
	Rpm creation 64bit bugfix
	Updating lens info database ( exiftool 8.770 )
	--timeout
	mingw32 ( Windows cross-compiler update )
	Limited support bugfix
	Adding limited support for K100D Super

version 0.79.00 ( 2012-10-03 )
	Support for K-30 added by Camilo Polymeris <cpolymeris@gmail.com>

version 0.78.00 ( 2012-07-29 )
	Building deb package for Raspbian ( Raspberry PI )

version 0.77.12 ( 2012-07-24 )
	--model ( buggy )
	--nowarnings
	--device
	Linux: Using /sys/block if /sys/class/scsi_generic is unaccessible ( Debian Wheezy )

version 0.77.10 ( 2012-04-15 )
	Precisier delay handling
	Supporting >30s shutter speeds ( only in Bulb mode )
	Exposure mode bugfix ( adding off-auto-aperture modes )