@@ -262,8 +262,9 @@ pslr_handle_t pslr_init( char *model, char *device ) {
     } else {
 	driveNum = 1;
 	drives = malloc( driveNum * sizeof(char*) );
-        drives[0] = malloc( sizeof( device ) );
-	strncpy( drives[0], device, sizeof( device ) );
+        drives[0] = malloc( strlen( device )+1 );
+	strncpy( drives[0], device, strlen( device ) );
+	drives[0][strlen(device)]='\0';
     }
     int i;
     for( i=0; i<driveNum; ++i ) {
